[package]
name = "local-reverse-image-search"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
akaze = "0.7.0"
clap = { version = "4.0.32", features = ["derive"] }
image = "0.23.14"
bitarray = "0.2.6"
kdam = "0.3.0"
serde = {version = "1.0.152", features = ["derive"]}
serde_json = "1.0.91"
walkdir = "2"
granne = "0.5.2"
image_hasher = "1.1.2"

# plotters = "0.3.4"
# kiddo = "0.2.4"
# sled = "0.34.7"
# tui = "0.19.0"
# rayon = "1.6.1"
# img_hash = "3.2.0"
# image = "0.23.14"
# image = "0.24.5"
# cv = "0.6.0"
# image = "0.24.5"