[package]
name = "local-reverse-image-search"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.152", features = ["derive"]}
serde_derive = "1.0.152"
toml = "0.5.10"
akaze = "0.7.0"
clap = { version = "4.0.32", features = ["derive"] }
image = "0.23.14"
bitarray = "0.2.6"
kdam = "0.3.0"
walkdir = "2"
pbr = "1.0.4"
indicatif = "0.17.2"
console = "0.15.3"
statistical = "1.0.0"
num_cpus = "1.15.0"
sled = "0.34.7"
bincode = "1.3.3"
kdtree = "0.7.0"
unicode-segmentation = "1.10.0"
rfd = "0.10.0"

# unused but possibly used in the future
# show-image = {version = "0.13.1", features = ["image"]}
# image_hasher = "1.1.2"