[package]
name = "local-reverse-image-search"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
# hamming-lsh = "0.3.2"
image = "0.24.5"
# img_hash = "3.2.0"
image_hasher = "1.1.2"
kdam = "0.3.0"
rayon = "1.6.1"
serde = "1.0.152"
serde_json = "1.0.91"
walkdir = "2"
